# foundation

./: .cursorrules  .gitignore  Makefile  README.md  pyproject.toml
code/foundation/: __init__.py
code/foundation/v1/: __init__.py
code/foundation/v1/command_line_tools/for_initializing_projects/: __main__.py  utilities.py
code/foundation/v1/command_line_tools/for_initializing_projects/python_backend_template/Backend/: .cursorrules  pyproject.toml
code/foundation/v1/command_line_tools/for_initializing_projects/python_backend_template/Backend/documentation/: Project_Structure.md
code/foundation/v1/command_line_tools/for_initializing_projects/python_backend_template/Backend/server/: fastapi_app.py
code/foundation/v1/command_line_tools/for_initializing_projects/python_backend_template/Backend/server/scripts/: kill_server.sh  run_server.py
code/foundation/v1/command_line_tools/for_initializing_projects/python_package_template/: .pre-commit-config.yaml  Makefile  pyproject.toml
code/foundation/v1/command_line_tools/for_initializing_projects/python_package_template/Code/PackageName/: __init__.py
code/foundation/v1/command_line_tools/for_initializing_projects/python_package_template/Code/PackageName/Unchanging/: __init__.py
code/foundation/v1/command_line_tools/for_initializing_projects/python_package_template/Documentation/: Project_Structure.md
code/foundation/v1/command_line_tools/for_initializing_projects/python_package_template/Tests/: Quick_Test.py  Test_This_Package.py
code/foundation/v1/component_framework/: __init__.py  component.py
code/foundation/v1/component_framework/universal_components/: __init__.py  registry.py
code/foundation/v1/constants/: logging_related.py
code/foundation/v1/operation_framework/: operation.py
code/foundation/v1/universal_utility_functions/: __init__.py
code/foundation/v1/universal_utility_functions/comparison_related/: __init__.py  general_comparison_utilities.py
code/foundation/v1/universal_utility_functions/concurrency_related/: __init__.py  general_concurrency_utilities.py
code/foundation/v1/universal_utility_functions/filesystem_related/: __init__.py  general_filesystem_utilities.py  searching_related.py
code/foundation/v1/universal_utility_functions/logging_related/: __init__.py  general_logging_utilities.py
documentation/: directory_structure.md
source_code/foundation/: __init__.py  __init__.py.md
source_code/foundation/v1/: __init__.py  __init__.py.md
source_code/foundation/v1/operation_framework/: operation.py  operation.py.md
source_code/foundation/v1/services/: __init__.py  __init__.py.md
source_code/foundation/v1/services/file_system_monitoring/: __init__.py  __init__.py.md  file_system_change_processor.py  file_system_observer.py
source_code/foundation/v1/services/logging/: custom_logger.py  custom_terminal_formatter.py  terminal_logging_configuration.py
source_code/foundation/v1/services/registering/: registry.py
source_code/foundation/v1/universal_utilities/: __init__.py
source_code/foundation/v1/universal_utilities/concurrency_related/: general_concurrency_utilities.py
source_code/foundation/v1/universal_utilities/filesystem_related/: __init__.py  general_filesystem_utilities.py  searching_related.py
source_code/foundation/v1/universal_utilities/metaclasses/: singleton_metaclass.py
tests/: quick_test.py  test_importing_this_package.py
(+7 files in other folders)
